# form_scrapper

./: README.md
form_scrapper/: Dockerfile  README.md  pyproject.toml  test_script.sh
form_scrapper/core/: enums.py  form_maker.py
form_scrapper/form_scrapper/server/: app.py  database.py
form_scrapper/form_scrapper/server/routes/: forms.py
form_scrapper/tests/: data_add.py  test_data.py  test_form_maker.py
