[tool.poetry]
name = "form-scrapper"
version = "0.1.0"
description = ""
authors = ["Anton Sadagov <anton.sadagov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
gunicorn = "20.0.4"
flake8 = "^6.1.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
uritemplate = "^4.1.1"
inflection = "^0.5.1"
django-cors-headers = "^4.3.1"
pytest = "^7.4.3"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pymongo = "^4.6.0"
motor = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
